feat: CEO, APP 가게 조회시 지역 ID 필터링 추가